libdebian-installer (0.57) UNRELEASED; urgency=low

  * Add support for PA Semi's evaluation systems (closes: #464429).
    Thanks to Olof Johansson for the patch.

 -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 17:02:47 +0100

libdebian-installer (0.56) unstable; urgency=low

  [ Bastian Blank ]
  * Return more correct errors fom execution.

  [ Joey Hess ]
  * Fix subarch detection of mips on current versions of qemu. The cpu 
    model is reported as "MIPS 24K", not "MIPS 4K". Left the old value in to
    support old qemu versions.

 -- Joey Hess <joeyh@debian.org>  Thu, 06 Mar 2008 18:18:13 -0500

libdebian-installer (0.55) unstable; urgency=low

  [ Stephen R. Marenka ]
  * archdetect: Add support for m68k/aranym (atari).

  [ Aurelien Jarno ]
  * archdetect: Add support for mips{,el}/{4,5}kc-malta platforms.

  [ Martin Michlmayr ]
  * archdetect: Add support for QNAP TS-109/TS-209.

 -- Martin Michlmayr <tbm@cyrius.com>  Tue, 05 Feb 2008 11:12:15 -0700

libdebian-installer (0.54) unstable; urgency=low

  [ Frans Pop ]
  * Add Description field to pkg-config files as their absence is making
    'pkg-config --list-all' fail. Closes: #453187.
  * Make Name in pkg-config files a bit more descriptive.

  [ Martin Michlmayr ]
  * Add support for the Orion (ARM) platform.

 -- Martin Michlmayr <tbm@cyrius.com>  Thu, 29 Nov 2007 09:10:54 +0100

libdebian-installer (0.53) unstable; urgency=low

  * Remove compatibility with ancient dpkg-architecture; build-depend on
    newer dpkg-dev instead.
  * archdetect: Add the powerpc/cell platform.

 -- Colin Watson <cjwatson@debian.org>  Sat, 20 Oct 2007 03:34:24 +0100

libdebian-installer (0.52) unstable; urgency=low

  [ Joey Hess ]
  * Move one more resolver debug message to ENABLE_EXTENSIVE_DEBUG.

  [ Martin Michlmayr ]
  * Match SGI O2 machines with 300MHz RM5200SC (Nevada) CPUs.

  [ Colin Watson ]
  * archdetect: Add the powerpc/ps3 platform.

 -- Frans Pop <fjp@debian.org>  Sat, 30 Jun 2007 08:45:53 +0200
