@@ -1,7 +1,12 @@
 libdebian-installer (0.57) UNRELEASED; urgency=low
 
+  [ Frans Pop ]
   * Add support for PA Semi's evaluation systems (closes: #464429).
     Thanks to Olof Johansson for the patch.
+
+  [ Martin Michlmayr ]
+  * Rename orion to orion5x to allow for support of other Orion
+    platforms in the future.
 
  -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 17:02:47 +0100
 
